// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElasticAgentCard props button 1`] = `
<NoDataCard
  button="Button"
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  image="test-file-stub"
  title="Add Elastic Agent"
/>
`;

exports[`ElasticAgentCard props category 1`] = `
<NoDataCard
  category="custom"
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  image="test-file-stub"
  title="Add Elastic Agent"
/>
`;

exports[`ElasticAgentCard props href 1`] = `
<NoDataCard
  button="Button"
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  href="some path"
  image="test-file-stub"
  title="Add Elastic Agent"
/>
`;

exports[`ElasticAgentCard props recommended 1`] = `
<NoDataCard
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  image="test-file-stub"
  recommended={true}
  title="Add Elastic Agent"
/>
`;

exports[`ElasticAgentCard renders 1`] = `
<NoDataCard
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  image="test-file-stub"
  title="Add Elastic Agent"
/>
`;
